# mysetting

./: .gitignore  CMakeLists.txt  README.md  TEMP.md  rename.csh  vimrc
doc/: CMakeLists.txt  doxygen.conf
docs/: CMakeLists.txt  doxygen.conf
include/: mysetting_main.hpp  mysetting_object.hpp
libbase/: CMakeLists.txt
libs/util/: CMakeLists.txt
libs/util/include/: util_git.hpp  util_git.hpp.in  util_log.hpp  util_main.hpp  util_point.hpp  util_runtime.hpp  util_util.hpp  util_version.hpp
libs/util/src/: util_git.cpp  util_log.cpp  util_main.cpp  util_point.cpp  util_runtime.cpp  util_util.cpp  util_version.cpp
libs/util/test/: CMakeLists.txt  util_git.test.cpp  util_main.test.cpp  util_util.test.cpp
src/: CMakeLists.txt  git.cpp  git.hpp.in  git.test.cpp  git.test.hpp  log.cpp  log.hpp  main.cpp  main.hpp  main.test.cpp  main.test.hpp  my_base_git.hpp.in  my_base_main.test.cpp  mysetting_main.cpp  mysetting_object.cpp  runtime.cpp  runtime.hpp  util.cpp  util.hpp  version.cpp  version.hpp
src/libbase/: my_base_git.hpp.in
test/: CMakeLists.txt  mysetting_main.test.cpp  mysetting_object.test.cpp
